# R-Type

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  RFC.txt  build_project.sh  build_subs.sh  cmake_install.cmake
.github/workflows/: doxygen.yml  format-code.yml  test-build.yml
docs/: rfc.txt
docs/mdbook/: book.toml
docs/mdbook/book/: 404.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
docs/mdbook/src/: SUMMARY.md  architecture.md  engine.md  game.md  tutoriel.md
doxygen/html/: Button_8hpp_source.html  Cutscene_8hpp_source.html  Dropdown_8hpp_source.html  Entities_8hpp.html  Entities_8hpp_source.html  FireAnimation_8hpp_source.html  Game_8hpp_source.html  Menu_8hpp_source.html  Registry_8hpp.html  Registry_8hpp_source.html  Server_8hpp.html  Server_8hpp_source.html  Sound_8hpp_source.html  SparseArray_8hpp.html  SparseArray_8hpp_source.html  TextInput_8hpp_source.html  Text_8hpp_source.html  Utils_8hpp_source.html  Wave_8hpp.html  Wave_8hpp_source.html  Window_8hpp_source.html  annotated.html  classAScene-members.html  classAScene.html  classButton-members.html  classButton.html  classCommandGame-members.html  classCommandGame.html  classCommandHandle-members.html  classCommandHandle.html  classCommandSend-members.html  classCommandSend.html  classCutscene-members.html  classCutscene.html  classDropdown-members.html  classDropdown.html  classEndLess-members.html  classEndLess.html  classEntities-members.html  classEntities.html  (+80 more)
doxygen/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+11 more)
ecs/: Entities.cpp  Entities.hpp  Registry.cpp  Registry.hpp  SparseArray.cpp  SparseArray.hpp  main.cpp
mdbook/book/: 404.html  architecture.html  engine.html  game.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js  tutoriel.html
mdbook/src/: SUMMARY.md  engine.md
src/ecs/: EntitiesGestion.cpp  EntitiesGestion.hpp  Registry.hpp  SparseArray.hpp  engine.md  main.hpp  test.cpp
src/game/: LaunchServer.cpp  LaunchServer.hpp
src/game/Components/: Background.hpp  Boutton.hpp  Components.hpp  Control.hpp  Draw.hpp  EnemyProperty.hpp  Health.hpp  LifeBar.hpp  MenuElements.hpp  Nickname.hpp  PlayerId.hpp  Position.hpp  Property.hpp  Size.hpp  TextInput.hpp  Type.hpp  Velocity.hpp  Visibility.hpp
src/game/config/endless/: wave_type_1.json
src/game/config/history/: history_1.json  history_10.json  history_2.json  history_3.json  history_4.json  history_5.json  history_6.json  history_7.json  history_8.json  history_9.json
src/game/gestion/: EntitiesGestion.cpp  EntitiesGestion.hpp
src/graphical/: AProtocol.hpp  AScene.cpp  AScene.hpp  Button.cpp  Button.hpp  Commands.cpp  Commands.hpp  Connexion.cpp  Connexion.hpp  Cutscene.cpp  Cutscene.hpp  Dropdown.cpp  Dropdown.hpp  Entities.hpp  FireAnimation.cpp  FireAnimation.hpp  Game.cpp  Game.hpp  IProtocol.hpp  LifeBar.cpp  LifeBar.hpp  Menu.cpp  Menu.hpp  Serialisation.cpp  Serialisation.hpp  Sound.cpp  Sound.hpp  Systems.cpp  Systems.hpp  TcpClient.cpp  TcpClient.hpp  Text.cpp  Text.hpp  TextInput.cpp  TextInput.hpp  UdpClient.cpp  UdpClient.hpp  Utils.hpp  Window.cpp  Window.hpp  (+2 more)
src/graphical/CORE/: AWindow.hpp  IWindow.hpp  WindowManager.cpp  WindowManager.hpp
src/graphical/Components/: Control.hpp  Draw.hpp  Health.hpp  Nickname.hpp  Position.hpp  Property.hpp  Velocity.hpp
src/graphical/SCENES/: GameWindow.cpp  GameWindow.hpp  MenuWindow.cpp  MenuWindow.hpp
src/graphical/SYSTEMS/: ConnectionManager.cpp  ConnectionManager.hpp  HandleSystem.cpp  HandleSystem.hpp  QueueSystem.cpp  QueueSystem.hpp  SendSystem.cpp  SendSystem.hpp
src/graphical/UTILS/: Command.hpp  Logger.hpp
src/graphical/commandSystem/: CommandGame.cpp  CommandGame.hpp  CommandHandle.cpp  CommandHandle.hpp  CommandSend.cpp  CommandSend.hpp
src/graphical/handleCommand/: IHandleCommand.hpp  sendCommand.cpp
src/graphical/network/: AClient.cpp  AClient.hpp  IClient.hpp  Tcp.cpp  Tcp.hpp  Udp.cpp  Udp.hpp
src/graphical/oldVersion/: AScene.hpp  Connexion.cpp  Connexion.hpp  Game.cpp  Game.hpp  IScene.hpp  Systems.hpp
src/graphical/scenes/: AScene.cpp  AScene.hpp  Cutscene.cpp  Cutscene.hpp  EndLess.cpp  EndLess.hpp  History.cpp  History.hpp  IScene.hpp  Lobby.cpp  Lobby.hpp  Lobby1v1.cpp  Lobby1v1.hpp  LobbyHistory.cpp  LobbyHistory.hpp  Menu.cpp  Menu.hpp  OneVsOne.cpp  OneVsOne.hpp
src/network/: AProtocol.cpp  AProtocol.hpp
src/network/client/: AClient.cpp  AClient.hpp  IClient.hpp  Tcp.cpp  Tcp.hpp  Udp.cpp  Udp.hpp
src/network/server/: AProtocol.cpp  AProtocol.hpp  IProtocol.hpp
src/network/tcp/: Tcp.cpp  Tcp.hpp
src/network/udp/: Udp.cpp  Udp.hpp
src/queue/: Command.hpp  Queue.cpp  Queue.hpp
src/server/: AProtocol.cpp  AProtocol.hpp  Command.hpp  GameCommand.cpp  HandleCommand.cpp  IProtocol.hpp  Queue.cpp  Queue.hpp  SendCommand.cpp  Server.cpp  Server.hpp  main.cpp
src/server/commandSystem/: CommandGame.cpp  CommandGame.hpp  CommandHandle.cpp  CommandHandle.hpp  CommandSend.cpp  CommandSend.hpp
src/server/game/: Game.cpp  Game.hpp
src/server/network/: AProtocol.hpp  IProtocol.hpp
src/server/old/: GameCommand.cpp  SendCommand.cpp
src/server/scenes/: AScene.cpp  AScene.hpp  EndLess.cpp  EndLess.hpp  History.cpp  History.hpp  IScene.hpp  Lobby.cpp  Lobby.hpp  Lobby1v1.cpp  Lobby1v1.hpp  LobbyHistory.cpp  LobbyHistory.hpp  OneVsOne.cpp  OneVsOne.hpp
src/server/tcp/: Tcp.cpp  Tcp.hpp
src/server/temp/: HandleCommand.cpp
src/server/udp/: UDP.cpp  UDP.hpp
uml/: archi.puml  network.puml  queue.puml  scene.puml
workflows/: r-type-dev-mirror.yml  r-type-mirror.yml
(+39 files in other folders)
